fix: firefix the firefox with align middle baseline (#113)

--- a/packages/components/src/FormField/FormField.css
+++ b/packages/components/src/FormField/FormField.css
@@ -86,6 +86,7 @@ select.formField {
 .inline {
   display: inline-block;
   width: auto;
+  vertical-align: -moz-middle-with-baseline;
 }
 
 /* Sizes */
